[tool.poetry]
name = "my-ledger-book"
version = "0.1.0"
description = ""
authors = ["RedNam <tech@rednam.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
black = "^22.6.0"
isort = "^5.10.1"
uvicorn = "^0.18.3"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-builtins = "^1.5.3"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.3"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
